--- a/LexiconMDB/Views/Home/Contact.cshtml
+++ b/LexiconMDB/Views/Home/Contact.cshtml
@@ -1,17 +1,12 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title details</h2>
+<h3>Developer</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<p>
+  You can find me on <a href="https://github.com/HappyStinson" target="_blank">GitHub</a>!
+</p>
+<p>
+  Here is my personal <a href="http://blog.rasmusnordling.se" target="_blank">blog</a> :)
+</p>
