--- a/LexiconMDB/Views/Home/About.cshtml
+++ b/LexiconMDB/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
+<h3>Media Directory</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Developed in february 2017. Uses ASP.NET MVC 5. Could be extended to also store Music and other media.</p>
