--- a/LexiconMDB/Views/Movies/Index.cshtml
+++ b/LexiconMDB/Views/Movies/Index.cshtml
@@ -6,21 +6,16 @@
 @Html.ActionLink("Drama", "Index", new { orderBy = ViewBag.Orderby, genre = "Drama" })
 @Html.ActionLink("Comedy", "Index", new { orderBy = ViewBag.Orderby, genre = "Comedy" })
 
-
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New Movie", "Add", "Movies", null, new { @class = "btn btn-primary btn-sm" })
 </p>
 <table class="table">
     <tr>
         <th>
             @Html.ActionLink("Title", "Index", new { orderBy = "title", genre = ViewBag.Genre })
-            @*@Html.DisplayNameFor(model => model.Title)*@
         </th>
         <th>
             @Html.ActionLink("Length", "Index", new { orderBy = "Length", genre = ViewBag.Genre })
-            @*<a href="/Movies/Index/?orderby=length">
-                @Html.DisplayNameFor(model => model.Length)
-            </a>*@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Genre)
@@ -29,35 +24,49 @@
             @Html.DisplayNameFor(model => model.AgeLimit)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MetaScore)
+            @Html.DisplayNameFor(model => model.ReleaseYear)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Metascore)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IMDbTopRated)
         </th>
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Length)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AgeLimit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MetaScore)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-    }
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Title)
+        </td>
+      <td>
+        @if (item.Length != null)
+        {
+          @Html.DisplayFor(modelItem => item.Length) <text>mins</text>
+        }
+      </td>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.Genre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AgeLimit)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ReleaseYear)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Metascore)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.IMDbTopRated)
+        </td>
+      <td>
+        @Html.ActionLink("Edit", "Edit", "Movies", new { id = item.Id }, new { @class = "btn btn-info btn-xs" })
+        @Html.ActionLink("Remove", "Remove", "Movies", new { id = item.Id }, new { @class = "btn btn-danger btn-xs" })
+      </td>
+    </tr>
+}
 
 </table>
